# medvae-disentangled-multimodal

./: MODALITY_SEPARATION_RESEARCH.md  README.md  analyze_latent_space.py  analyze_latent_space_simple.py  basic_test.py  check_channels.py  evaluate.py  generate.py  main.py  pseudo_modality_analysis.npz  pyproject.toml  quick_generate.py  quick_generate_multimodal.py  quick_test.py  requirements.txt  test_modality_channels.py
configs/: config.yaml
configs/data/: chest_xray.yaml  chest_xray_quick.yaml  multi_modal.yaml  multi_modal_quick.yaml  pathology.yaml
configs/experiment/: chest_base_vae.yaml  chest_base_vae_quick.yaml  chest_beta_vae_quick.yaml  chest_conditional_vae_quick.yaml  disentangled_multi_modal_cvae_quick.yaml  multi_modal_cvae.yaml  multi_modal_cvae_quick.yaml  path_beta_vae.yaml
configs/model/: base_vae.yaml  base_vae_quick.yaml  beta_vae.yaml  beta_vae_quick.yaml  conditional_vae.yaml  conditional_vae_quick.yaml  disentangled_conditional_vae_quick.yaml
configs/training/: advanced.yaml  default.yaml  quick.yaml
lightning_logs/version_0/: events.out.tfevents.1753053723.d551e305-f7e6-43f1-be3e-18ce2ecc9276.fritz.box.52242.0
lightning_logs/version_1/: events.out.tfevents.1753053763.d551e305-f7e6-43f1-be3e-18ce2ecc9276.fritz.box.53215.0
lightning_logs/version_16/: events.out.tfevents.1753121411.ip-10-192-10-91.4363.0
notebooks/: conditional_disentangled_vae_interactive.ipynb  vanilla_vae_interactive.ipynb
results/: disentangled_modality_analysis.npz
scripts/: demo.sh  train_all.sh  train_quick.sh
src/: lightning_module.py
(+87 files in other folders)
